welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (talking == true && hour < 7 && hour > 20){
  ^